# sprout

./: .gitignore  LICENSE  README.md  flake.nix  justfile  main.py  main.sh  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2jp7xjd7i13m4lzpw3vb3nmzacl8vzry-source
.github/workflows/: ci.yml
addons/: _registry.py  _registry.sh
addons/celery/: apply.py
addons/celery/files/: tasks.py.j2  worker.py.j2
addons/celery/files/tasks/: example_tasks.py.j2
addons/docker/: Dockerfile  apply.py  compose.yml
addons/docker/files/: Dockerfile  Dockerfile.j2  compose.yml.j2
addons/github-actions/: apply.py  ci.yml.j2
addons/github-actions/files/: ci.yml.j2
addons/redis/: apply.py  redis.py
addons/redis/files/: redis.py
addons/sentry/: apply.py
addons/sentry/files/: sentry.py.j2
generate/: flake.nix.j2  justfile.j2  pyproject.toml.j2
lib/: generate.sh  nix.sh  postgres.sh  prompt.sh  ui.sh  validate.sh
src/scaffolder/: _apply_loader.py  _paths.py  add.py  apply.py  assembler.py  checks.py  checks_remove.py  collect.py  context.py  deps.py  doctor.py  dryrun.py  exceptions.py  generate.py  git.py  lockfile.py  main.py  nix.py  postgres.py  prompt.py  remove.py  render.py  rollback.py  scaffold.py  schema.py  ui.py  validate.py
src/scaffolder/addons/: _registry.py  add.py  checks.py  checks_remove.py  remove.py
src/scaffolder/addons/auth-manual/: addon.py
src/scaffolder/addons/celery/: addon.py  apply.py
src/scaffolder/addons/docker/: addon.py
src/scaffolder/addons/github-actions/: addon.py
src/scaffolder/addons/redis/: addon.py
src/scaffolder/addons/sentry/: addon.py  apply.py
src/scaffolder/cli/: main.py  ui.py
src/scaffolder/cli/prompt/: _keys.py  _multi.py  _render.py  _single.py
src/scaffolder/config/: config.py
src/scaffolder/core/: _apply_loader.py  _paths.py  apply.py  collect.py  context.py  deps.py  dryrun.py  generate.py  git.py  justfile.py  lockfile.py  manifest.py  rollback.py  scaffold.py  validate.py
src/scaffolder/core/handlers/: __init__.py  base.py  env_handler.py  justfile_handler.py  locators.py  python_handler.py  toml_handler.py  yaml_handler.py
src/scaffolder/doctor/: doctor.py
src/scaffolder/generate/: justfile.j2  pyproject.toml.j2
src/scaffolder/prompt/: __init__.py  _keys.py  _multi.py  _render.py  _single.py
src/scaffolder/schema/: models.py
src/scaffolder/templates/: _load_config.py
src/scaffolder/templates/_common/: apply.py  envrc  gitattributes  gitignore  shell.nix
src/scaffolder/templates/blank/: apply.py  template.py
src/scaffolder/templates/fastapi/: template.py
src/sprout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/_common/: apply.py  apply.sh  envrc  gitignore  pre-commit-config.yaml
templates/blank/: apply.py  apply.sh
templates/blank/files/: main.py  main.py.j2
templates/blank/files/tests/: test_main.py  test_main.py.j2
templates/fastapi/: apply.py  apply.sh
templates/fastapi/files/: .env  .env.example  .env.j2  alembic.ini  alembic.ini.j2  database.py  exceptions.py  main.py  models.py  security.py  settings.py  settings.py.j2
templates/fastapi/files/alembic/: env.py  env.py.j2
templates/fastapi/files/api/: router.py
templates/fastapi/files/core/: security.py
templates/fastapi/files/models/: mixins.py
templates/fastapi/files/scripts/: wait_db.py
templates/fastapi/files/tests/: conftest.py  conftest.py.j2  test_health.py  (+1 more)
tests/: conftest.py  test_add.py  test_addon_can_apply.py  test_apply_contributions.py  test_assembler.py  test_checks.py  test_checks_remove.py  test_collect.py  test_config.py  test_context.py  test_deps.py  test_doctor.py  test_dryrun.py  test_functional.py  test_generate.py  test_integration.py  test_justfile.py  test_lockfile.py  test_print_results.py  test_prompt.py  test_remove.py  test_remove_helpers.py  test_render.py  test_rollback.py  test_schema.py  test_validate.py
tests/addons/: test_add.py  test_addon_can_apply.py  test_checks.py  test_checks_remove.py  test_remove.py  test_remove_helpers.py
tests/cli/: test_prompt.py
tests/config/: test_config.py
tests/core/: test_apply_contributions.py  test_collect.py  test_context.py  test_deps.py  test_dryrun.py  test_fingerprint.py  test_generate.py  test_justfile.py  test_lockfile.py  test_manifest.py  test_manifest_completeness.py  test_removal_fuzzy.py  test_render.py  test_rollback.py  test_validate.py
tests/doctor/: test_doctor.py  test_print_results.py
tests/handlers/: test_env_handler.py  test_handler_dispatcher.py  test_justfile_handler.py  test_locators.py  test_python_handler.py  test_toml_handler.py  test_yaml_handler  test_yaml_handler.py
tests/schema/: test_schema.py
(+28 files in other folders)
