[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jumpstart-cli"
version = "0.1.9"
description = "Scaffold your next Python project with one command"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bojan Konjevic", email = "konjevicbojan1@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["jinja2", "typer>=0.12", "pyyaml"]

[project.urls]
Homepage = "https://github.com/BojanKonjevic/jumpstart"
Repository = "https://github.com/BojanKonjevic/jumpstart"
Issues = "https://github.com/BojanKonjevic/jumpstart/issues"

[project.scripts]
jumpstart = "scaffolder.main:main"
js = "scaffolder.main:main"

[dependency-groups]
dev = [
    "mypy>=1",
    "ruff>=0.4",
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scaffolder" = [
    "templates/**/*",
    "templates/**/.*",
    "addons/**/*",
    "addons/**/.*",
    "generate/*",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"addons/celery/apply.py" = ["E501"]
"addons/sentry/apply.py" = ["E501"]

[tool.mypy]
strict = true
exclude = [
    "src/scaffolder/templates/",
    "src/scaffolder/addons/.*/files/",
]
