[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jumpstart-cli"
version = "0.2.0"
description = "Scaffold your next Python project with one command"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bojan Konjevic", email = "konjevicbojan1@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["jinja2", "typer>=0.12", "pyyaml"]

[project.urls]
Homepage = "https://github.com/BojanKonjevic/jumpstart"
Repository = "https://github.com/BojanKonjevic/jumpstart"
Issues = "https://github.com/BojanKonjevic/jumpstart/issues"

[project.scripts]
jumpstart = "scaffolder.main:main"
js = "scaffolder.main:main"

[dependency-groups]
dev = [
    "mypy>=1",
    "ruff>=0.4",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scaffolder" = [
    "templates/**/*",
    "templates/**/.*",
    "addons/**/*",
    "addons/**/.*",
    "generate/*",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"addons/celery/apply.py" = ["E501"]
"addons/sentry/apply.py" = ["E501"]

[tool.mypy]
strict = true
exclude = [
    "src/scaffolder/templates/",
    "src/scaffolder/addons/.*/files/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = ["slow: marks tests as slow (deselect with -m 'not slow')"]
