[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zenit"
version = "1.0.6"
description = "Scaffold your next Python project with one command"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Bojan Konjevic", email = "konjevicbojan1@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["jinja2", "typer>=0.12", "pyyaml", "tomli-w", "tomlkit"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/BojanKonjevic/zenit"
Repository = "https://github.com/BojanKonjevic/zenit"
Issues = "https://github.com/BojanKonjevic/zenit/issues"

[project.scripts]
zenit = "scaffolder.main:main"
zn = "scaffolder.main:main"

[dependency-groups]
dev = [
    "mypy>=1",
    "ruff>=0.4",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scaffolder" = [
    "templates/**/*",
    "templates/**/.*",
    "addons/**/*",
    "addons/**/.*",
    "generate/*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"addons/celery/apply.py" = ["E501"]
"addons/sentry/apply.py" = ["E501"]

[tool.mypy]
strict = true
exclude = [
    "src/scaffolder/templates/",
    "src/scaffolder/addons/.*/files/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = ["slow: marks tests as slow (deselect with -m 'not slow')"]
